# kuzu-cypher-tck

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
kuzu-lib/: kuzu.hpp
scripts/: graph.py  results.json  stats.py
src/: main.rs
tests/: cypher.rs  kuzu.rs  tables.rs
tests/features/: gitcommit
tests/features/clauses/call/: Call1.feature  Call2.feature  Call3.feature  Call4.feature  Call5.feature  Call6.feature
tests/features/clauses/create/: Create1.feature  Create2.feature  Create3.feature  Create4.feature  Create5.feature  Create6.feature
tests/features/clauses/delete/: Delete1.feature  Delete2.feature  Delete3.feature  Delete4.feature  Delete5.feature  Delete6.feature
tests/features/clauses/match/: Match1.feature  Match2.feature  Match3.feature  Match4.feature  Match5.feature  Match6.feature  Match7.feature  Match8.feature  Match9.feature
tests/features/clauses/match-where/: MatchWhere1.feature  MatchWhere2.feature  MatchWhere3.feature  MatchWhere4.feature  MatchWhere5.feature  MatchWhere6.feature
tests/features/clauses/merge/: Merge1.feature  Merge2.feature  Merge3.feature  Merge4.feature  Merge5.feature  Merge6.feature  Merge7.feature  Merge8.feature  Merge9.feature
tests/features/clauses/remove/: Remove1.feature  Remove2.feature  Remove3.feature
tests/features/clauses/return-orderby/: ReturnOrderBy1.feature  ReturnOrderBy2.feature  ReturnOrderBy3.feature  ReturnOrderBy4.feature  ReturnOrderBy5.feature  ReturnOrderBy6.feature
tests/features/clauses/return-skip-limit/: ReturnSkipLimit1.feature  ReturnSkipLimit2.feature  (+1 more)
(+125 files in other folders)
