[package]
name = "kuzu-cypher-tck"
version = "0.1.0"
edition = "2024"

[dependencies]
kuzu = "0.8"

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "kuzu"
harness = false

[lints.clippy]
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

style = { level = "warn", priority = -1 }

complexity = { level = "warn", priority = -1 }
too_many_arguments = "allow"
type_complexity = "allow"

cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

pedantic = { level = "warn", priority = -1 }
#cast_lossless = "allow"
#cast_possible_truncation = "allow"
#cast_possible_wrap = "allow"
#cast_precision_loss = "allow"
#cast_sign_loss = "allow"
#comparison_chain = "allow"
#default_trait_access = "allow"
doc_markdown = "allow"
#if_not_else = "allow"
#ignored_unit_patterns = "allow"
inline_always = "allow"
#items_after_statements = "allow"
#let_and_return = "allow"
#match_same_arms = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
#redundant_closure_for_method_calls = "allow"
#redundant_else = "allow"
#return_self_not_must_use = "allow"
#semicolon_if_nothing_returned = "allow"
similar_names = "allow"
#single_match_else = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
#uninlined_format_args = "allow"
#wildcard_imports = "allow"
